rtg_tests/negative/excluded_generics/go.mod
module example.com/rtgtests/negative/generics

go 1.25
